----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-11-18 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/*: strUpgradeMySQL -> strUpgrade with one more parameter
      for the product name
    * main.php: new warnings for old PHP or MySQL versions

2003-11-18 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/display_tbl.lib.php: Can kill more proceses (bug #844353).

2003-11-18 Michal Cihar  <nijel@users.sourceforge.net>
    * almost EVERYTHING: The big rename from php3 to php.

2003-11-18 Michal Cihar  <nijel@users.sourceforge.net>
    * read_dump.php3: Show result of last SHOW query when multiple queries.
    * scripts/create-release.sh: Generate also sizes of files, for
      files.inc.php on homepage.
    
2003-11-17 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/french: update
    * lang/turkish update, thanks to Bora Alioglu
    * lang/italian: Updated, thanks to Pietro Danesi (danone).
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).

2003-11-14 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_structure.php3: bug 842053: not only TEXT but also
      any ...TEXT field types can have a FULLTEXT index

2003-11-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php3: undefined variable dblist_full when
      renaming a table

2003-11-13 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/export/sql.php3: Fix export of foreign keys (patch #834474).
    * libraries/export/sql.php3, libraries/config_import.lib.php3,
      libraries/common.lib.php3, libraries/display_export.lib.php3, lang/*,
      config.inc.php3: Allow delayed inserts (RFE #841298).
    * libraries/export/sql.php3, libraries/common.lib.php3,
      libraries/config_import.lib.php3, libraries/display_export.lib.php3,
      lang/*, config.inc.php3: Support for creating UPDATE and REPLACE
      statements in export (RFE #838828).